[MOSIP-8832] Passwords passed via helm command.

--- a/deployment/sandbox-v2/helm/charts/keycloak/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/keycloak/values.template.j2
@@ -2,7 +2,7 @@ name: keycloak
 dockerImage: jboss/keycloak
 dockerTag: 9.0.0 
 keycloakUser: {{ keycloak.user }}
-keycloakPassword: {{ secrets.keycloak.password }} 
+keycloakPassword: '' # To be passed directly with helm command
 domain: {{ sandbox_domain_name }}
 internalDomain: {{ clusters.mz.nodeport_node }} 
 keycloakExternalUrl: "https://{{ sandbox_domain_name }}/keycloak/auth/"  
@@ -12,6 +12,6 @@ db:
   host: {{ postgres.service_name }}
   port: {{ postgres.service_port }} 
   user: {{ postgres.user }}
-  password: {{ secrets.postgres.su }}
+  password: '' # To be passed directly with helm command
 ingress:
    namespace: default 
