[MOSIP-9080] Minio added to sandbox landing page.

--- a/deployment/sandbox-v2/roles/nginx/templates/nginx_index.yml.j2
+++ b/deployment/sandbox-v2/roles/nginx/templates/nginx_index.yml.j2
@@ -42,6 +42,10 @@
     </p>
 
     <p>
+      <a href="https://{{sandbox_domain_name}}/minio/">Minio</a>
+    </p>
+
+    <p>
       Postgres: <br>
       host: {{sandbox_domain_name}}<br>
       port: 30090
