Minor update in sandbox landing page.

--- a/deployment/sandbox-v2/roles/nginx/templates/nginx_index.yml.j2
+++ b/deployment/sandbox-v2/roles/nginx/templates/nginx_index.yml.j2
@@ -45,10 +45,11 @@
       <a href="https://{{sandbox_domain_name}}/minio/">Minio</a>
     </p>
 
+  <h2>Postgres</h2>
     <p>
-      Postgres: <br>
       host: {{sandbox_domain_name}}<br>
       port: 30090
+    </p>
 </body>
 </html>
 
