--- a/deployment/sandbox-v2/helm/charts/reg-client-downloader/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/reg-client-downloader/values.template.j2
@@ -2,7 +2,7 @@ serviceName: reg-client-downloader
 
 activeProfileEnv: dmz 
 springConfigLabel: {{ config_repo.branch }} 
-configServerUrl: http://config-server/config
+configServerUrl: {{ config_server.internal_url }}
 artifactoryUrl: {{ artifactory_url }} 
 imagePullPolicy: Always
 docker:
