--- a/deployment/sandbox-v2/helm/charts/softhsm/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/softhsm/values.template.j2
@@ -2,7 +2,7 @@ serviceName: softhsm-{{hsm_prop.label}}
 
 activeProfileEnv: mz 
 springConfigLabel: {{ config_repo.branch }} 
-configServerUrl: http://config-server/config
+configServerUrl: {{ config_server.internal_url }}`
 artifactoryUrl: {{ artifactory_url }} 
 
 docker:
