--- a/deployment/sandbox-v2/helm/charts/minio/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/minio/values.template.j2
@@ -301,7 +301,7 @@ environment:
   MINIO_API_READY_DEADLINE: "5s"
   ## Please refer for comprehensive list https://docs.minio.io/docs/minio-server-configuration-guide.html
   MINIO_BROWSER: on
-  MINIO_DOMAIN: {{sandbox_domain_name}}
+  #MINIO_DOMAIN: minio
 
 networkPolicy:
   enabled: false
