--- a/deployment/sandbox-v2/roles/nginx/templates/nginx_https_conf.yml.j2
+++ b/deployment/sandbox-v2/roles/nginx/templates/nginx_https_conf.yml.j2
@@ -276,6 +276,10 @@ http {
            proxy_pass http://mzworker0.sb:30080/v1/credentialservice/;
         }
 
+        location /v1/datashare/ {
+           proxy_pass http://mzworker0.sb:30080/v1/datashare/;
+        }
+
         error_page 404 /404.html;
             location = /40x.html {
         }
