[MOSIP-9333] Datashare service added.

--- a/deployment/sandbox-v2/roles/nginx/templates/nginx_https_conf.yml.j2
+++ b/deployment/sandbox-v2/roles/nginx/templates/nginx_https_conf.yml.j2
@@ -260,6 +260,10 @@ http {
            proxy_pass http://mzworker0.sb:30080/commons/v1/packetmanager/;
         }
 
+        location /v1/datashare/ {
+           proxy_pass http://mzworker0.sb:30080/v1/datashare/;
+        }
+
         location /minio/ {
            proxy_pass http://mzworker0.sb:30080/minio/;
         }
