--- a/deployment/sandbox-v2/helm/charts/kernel/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/kernel/values.template.j2
@@ -4,6 +4,28 @@ activeProfileEnv: mz
 springConfigLabel: {{ config_repo.branch }} 
 configServerUrl: {{ config_server.internal_url }}
 artifactoryUrl: {{ artifactory_url }} 
+
+containerUserId: {{ container_user_id }}
+containerUserGid: {{ container_user_gid }}
+containerWorkDir: {{ container_work_dir }}
+podUserId: {{ pod_user_id }}
+podUserGid: {{ pod_user_gid }}
+service_account: {{ psp_service_account }}
+
+{{/* Temp volume for logs */}}
+{{- define "logger.volume" }}
+volumes:
+- name: applogs
+  emptyDir: {}
+{{- end }}
+
+{{/* Mount volume for logs */}}
+{{- define "logger.mount" }}
+volumeMounts:
+- name: applogs
+  mountPath: {{ .Values.containerWorkDir }}/logs
+{{- end }}
+
 probe:
   initialDelay: 120  # Seconds
   period: 30 # Seconds
