--- a/deployment/sandbox-v2/helm/charts/dmzregproc/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/dmzregproc/values.template.j2
@@ -4,7 +4,12 @@ activeProfileEnv: dmz
 springConfigLabel: {{ config_repo.branch }} 
 configServerUrl: {{ config_server.ingress_url }}
 storageClass:  manual
-
+containerUserId: {{ container_user_id }}
+containerUserGid: {{ container_user_gid }}
+containerWorkDir: {{ container_work_dir }}
+podUserId: {{ pod_user_id }}
+podUserGid: {{ pod_user_gid }}
+service_account: {{ psp_service_account }}
 probe:
   initialDelay: 30  # Seconds
   period: 30 # Seconds
