--- a/deployment/sandbox-v2/helm/charts/postgres/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/postgres/values.template.j2
@@ -2,6 +2,12 @@ name: postgres
 defaultDb: keycloak # Default DB on Postgres
 user: {{ postgres.user }} 
 password: '' # To be passed directly with helm command
+containerUserId: {{ container_user_id }}
+containerUserGid: {{ container_user_gid }}
+containerWorkDir: {{ container_work_dir }}
+podUserId: {{ pod_user_id }}
+podUserGid: {{ pod_user_gid }}
+service_account: {{ psp_service_account }}
 nfs:  # Must match nfs server params defined via Ansible
   server: {{ nfs.server }} 
   path: {{ postgres.nfs_path }}
