--- a/deployment/sandbox-v2/helm/charts/resident/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/resident/values.template.j2
@@ -3,6 +3,12 @@ part-of: mosip
 activeProfileEnv: mz 
 springConfigLabel: {{ config_repo.branch }} 
 configServerUrl: {{ config_server.internal_url }}
+containerUserId: {{ container_user_id }}
+containerUserGid: {{ container_user_gid }}
+containerWorkDir: {{ container_work_dir }}
+podUserId: {{ pod_user_id }}
+podUserGid: {{ pod_user_gid }}
+service_account: {{ psp_service_account }}
 ingress:
    namespace: default
 artifactoryUrl: {{ artifactory_url }} 
