[MOSIP-9376]  updated changes for dynamic iam_adapter

--- a/deployment/sandbox-v2/helm/charts/kernel/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/kernel/values.template.j2
@@ -4,6 +4,7 @@ activeProfileEnv: mz
 springConfigLabel: {{ config_repo.branch }} 
 configServerUrl: {{ config_server.internal_url }}
 artifactoryUrl: {{ artifactory_url }} 
+iamAdapterUrl: {{ iam_adapter_url }}
 probe:
   initialDelay: 120  # Seconds
   period: 30 # Seconds
