mosipbox_public_url passed as env variable.

--- a/deployment/sandbox-v2/helm/charts/regproc/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/regproc/values.template.j2
@@ -5,6 +5,7 @@ springConfigLabel: {{ config_repo.branch }}
 configServerUrl: {{ config_server.internal_url }}
 storageClass: dm-storage-class  # See sc, pv templates
 
+sitePublicUrl: {{ site.sandbox_public_url }}
 probe:
   initialDelay: 180  # Seconds
   period: 30 # Seconds
