--- a/deployment/sandbox-v2/helm/charts/idrepo/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/idrepo/values.template.j2
@@ -6,6 +6,7 @@ configServerUrl: {{ config_server.internal_url }}
 ingress:
    namespace: default
 artifactoryUrl: {{ artifactory_url }} 
+sitePublicUrl: {{ site.sandbox_public_url }}
 probe:
   initialDelay: 60  # Seconds
   period: 30 # Seconds
