[MOSIP-9567] deleted bio dedup service and added iam_adapter_url change in transaction service

--- a/deployment/sandbox-v2/helm/charts/regproc/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/regproc/values.template.j2
@@ -14,6 +14,7 @@ ingress:
    namespace: default
 
 artifactoryUrl: {{ artifactory_url }} 
+iamAdapterUrl: {{ iam_adapter_url }}
 
 imagePullPolicy: Always 
 
@@ -106,14 +107,6 @@ services:
       containerPort: 9096
     ingressPath: '' 
     healthUrl: /registrationprocessor/v1/biodedupe/actuator/health
-  biosvc:
-    serviceName: {{ versions.services.regproc.biosvc.keys()[0] }} 
-    dockerImage: {{ versions.services.regproc.biosvc.values()[0] }}
-    ports:
-      containerPort: 9097
-      servicePort: 80
-    ingressPath: /registrationprocessor/v1/bio-dedupe
-    healthUrl: /registrationprocessor/v1/bio-dedupe/actuator/health
   bioauth:
     serviceName: {{ versions.services.regproc.bioauth.keys()[0] }} 
     dockerImage: {{ versions.services.regproc.bioauth.values()[0] }}
