[MOSIP-9567 adding i_am-aythadapter url as env variable.]

--- a/deployment/sandbox-v2/helm/charts/dmzregproc/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/dmzregproc/values.template.j2
@@ -13,6 +13,7 @@ ingress:
    namespace: default
 
 artifactoryUrl: {{ artifactory_url }} 
+iamAdapterUrl: {{ iam_adapter_url }}
 
 isGlowroot: {{ is_glowroot }} 
 
