Sandbox url passed in resident services.

--- a/deployment/sandbox-v2/helm/charts/resident/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/resident/values.template.j2
@@ -8,6 +8,8 @@ ingress:
 artifactoryUrl: {{ artifactory_url }} 
 imagePullPolicy: Always
 
+sitePublicUrl: {{ site.sandbox_public_url }}
+
 isGlowroot: {{ is_glowroot }} 
 
 probe:
