added sandbox public URL

--- a/deployment/sandbox-v2/helm/charts/ida/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/ida/values.template.j2
@@ -12,6 +12,7 @@ probe:
 imagePullPolicy: Always
 
 isGlowroot: {{ is_glowroot }} 
+sitePublicUrl: {{ site.sandbox_public_url }}
 
 dockerHub:
   private: {{ docker_hub.private }}  
