[MOSIP-9700] added sandbox_public_url in internal deployment

--- a/deployment/sandbox-v2/helm/charts/ida/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/ida/values.template.j2
@@ -11,6 +11,8 @@ probe:
   period: 30 # Seconds
 imagePullPolicy: Always
 
+sitePublicUrl: {{ site.sandbox_public_url }}
+
 isGlowroot: {{ is_glowroot }} 
 
 dockerHub:
