[MOSIP-9702] Dynamic provisioning added for Elasticsearch Statefulset.

--- a/deployment/sandbox-v2/helm/charts/elasticsearch/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/elasticsearch/values.template.j2
@@ -117,8 +117,11 @@ podSecurityPolicy:
       - persistentVolumeClaim
 
 persistence:
-  enabled: false 
+  enabled: true
   annotations: {}
+  name: elasticsearch
+  size: 10G
+  sc: {{nfs.provisioner}} 
 
 extraVolumes: []
   # - name: extras
