--- a/deployment/sandbox-v2/helm/charts/kernel/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/kernel/values.template.j2
@@ -23,6 +23,7 @@ services:
     servicePort: 80
     ingressPath: /v1/authmanager
     healthUrl: /v1/authmanager/actuator/health
+    podconfig: {{ podconfig.kernel.auth | to_yaml }}
   masterdata:
     serviceName: {{ versions.services.kernel.masterdata.keys()[0] }} 
     dockerImage: {{ versions.services.kernel.masterdata.values()[0] }}
@@ -30,6 +31,7 @@ services:
     servicePort: 80
     ingressPath: /v1/masterdata
     healthUrl: /v1/masterdata/actuator/health
+    podconfig: {{ podconfig.kernel.masterdata | to_yaml }}
   idgen:
     serviceName: {{ versions.services.kernel.idgen.keys()[0] }} 
     dockerImage: {{ versions.services.kernel.idgen.values()[0] }}
@@ -37,6 +39,7 @@ services:
     servicePort: 80
     ingressPath: /v1/idgenerator 
     healthUrl: /v1/idgenerator/actuator/health
+    podconfig: {{ podconfig.kernel.idgen | to_yaml }}
   prid:
     serviceName: {{ versions.services.kernel.prid.keys()[0] }} 
     dockerImage: {{ versions.services.kernel.prid.values()[0] }}
@@ -44,6 +47,7 @@ services:
     servicePort: 80
     ingressPath: /v1/pridgenerator
     healthUrl: /v1/pridgenerator/actuator/health
+    podconfig: {{ podconfig.kernel.prid | to_yaml }}
   sync:
     serviceName: {{ versions.services.kernel.sync.keys()[0] }} 
     dockerImage: {{ versions.services.kernel.sync.values()[0] }}
@@ -51,6 +55,7 @@ services:
     servicePort: 80
     ingressPath: /v1/syncdata 
     healthUrl: /v1/syncdata/actuator/health
+    podconfig: {{ podconfig.kernel.sync | to_yaml }}
   audit:
     serviceName: {{ versions.services.kernel.audit.keys()[0] }} 
     dockerImage: {{ versions.services.kernel.audit.values()[0] }}
@@ -58,6 +63,7 @@ services:
     servicePort: 80
     ingressPath: /v1/auditmanager
     healthUrl: /v1/auditmanager/actuator/health
+    podconfig: {{ podconfig.kernel.audit | to_yaml }}
   key:
     serviceName: {{ versions.services.kernel.key.keys()[0] }} 
     dockerImage: {{ versions.services.kernel.key.values()[0] }}
@@ -66,6 +72,7 @@ services:
     hsmUrl: tcp://softhsm-keymanager:80   # Should match with softhsm chart service name and port
     ingressPath: /v1/keymanager
     healthUrl: /v1/keymanager/actuator/health
+    podconfig: {{ podconfig.kernel.key | to_yaml }}
   notifier:
     serviceName: {{ versions.services.kernel.notifier.keys()[0] }} 
     dockerImage: {{ versions.services.kernel.notifier.values()[0] }}
@@ -73,6 +80,7 @@ services:
     servicePort: 80
     ingressPath: /v1/notifier
     healthUrl: /v1/notifier/actuator/health
+    podconfig: {{ podconfig.kernel.notifier | to_yaml }}
   otp:
     serviceName: {{ versions.services.kernel.otp.keys()[0] }} 
     dockerImage: {{ versions.services.kernel.otp.values()[0] }}
@@ -80,6 +88,7 @@ services:
     servicePort: 80
     ingressPath: /v1/otpmanager 
     healthUrl: /v1/otpmanager/actuator/health
+    podconfig: {{ podconfig.kernel.otp | to_yaml }}
   rid:
     serviceName: {{ versions.services.kernel.rid.keys()[0] }} 
     dockerImage: {{ versions.services.kernel.rid.values()[0] }}
@@ -87,6 +96,7 @@ services:
     servicePort: 80
     ingressPath: /v1/ridgenerator 
     healthUrl: /v1/ridgenerator/actuator/health
+    podconfig: {{ podconfig.kernel.rid | to_yaml }}
 generators:
   keygen:
     name: {{ versions.services.kernel.keygen.keys()[0] }}
