updated git branch to version

--- a/deployment/sandbox-v2/helm/charts/admin/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/admin/values.template.j2
@@ -1,7 +1,7 @@
 component: admin
 part-of: mosip
 activeProfileEnv: mz 
-springConfigLabel: {{ config_repo.branch }} 
+springConfigLabel: {{ config_repo.version }} 
 configServerUrl: {{ config_server.internal_url }}
 ingress:
    namespace: default
