--- a/deployment/sandbox-v2/helm/charts/dmzregproc/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/dmzregproc/values.template.j2
@@ -1,7 +1,7 @@
 component: dmzregproc
 part-of: mosip
 activeProfileEnv: dmz 
-springConfigLabel: {{ config_repo.branch }} 
+springConfigLabel: {{ config_repo.version }} 
 configServerUrl: {{ config_server.ingress_url }}
 storageClass:  manual
 
