--- a/deployment/sandbox-v2/helm/charts/packetmanager/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/packetmanager/values.template.j2
@@ -1,7 +1,7 @@
 component: packetmanager
 part-of: mosip
 activeProfileEnv: mz 
-springConfigLabel:  {{ config_repo.branch }}
+springConfigLabel:  {{ config_repo.version }}
 configServerUrl: {{ config_server.internal_url }}
 artifactoryUrl: {{ artifactory_url }} 
 probe:
