--- a/deployment/sandbox-v2/helm/charts/reg-client-downloader/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/reg-client-downloader/values.template.j2
@@ -1,7 +1,7 @@
 serviceName: reg-client-downloader
 
 activeProfileEnv: dmz 
-springConfigLabel: {{ config_repo.branch }} 
+springConfigLabel: {{ config_repo.version }} 
 configServerUrl: {{ config_server.internal_url }}
 artifactoryUrl: {{ artifactory_url }} 
 imagePullPolicy: Always
