--- a/deployment/sandbox-v2/helm/charts/softhsm/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/softhsm/values.template.j2
@@ -1,7 +1,7 @@
 serviceName: softhsm-{{hsm_prop.label}}
 
 activeProfileEnv: mz 
-springConfigLabel: {{ config_repo.branch }} 
+springConfigLabel: {{ config_repo.version }} 
 configServerUrl: {{ config_server.internal_url }}`
 artifactoryUrl: {{ artifactory_url }} 
 
