--- a/deployment/sandbox-v2/helm/charts/reg-client-downloader/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/reg-client-downloader/values.template.j2
@@ -6,12 +6,12 @@ configServerUrl: {{ config_server.internal_url }}
 artifactoryUrl: {{ artifactory_url }} 
 imagePullPolicy: Always
 docker:
-  image: {{ versions.services.registration.client.values()[0] }}
+  image: {{ versions.services.registration_client.downloader.values()[0] }}
   ports:
     containerPort: 80
     servicePort: 80
 
-version: "{{ reg_client.version }}"
+version: {{ versions.services.registration_client.version }}
 mountPath: "/build_files"  # path inside docker
 crypto_key_env: {{ reg_client.crypto_key }}
 bootpwd: {{ reg_client.bootpwd }}
