--- a/deployment/sandbox-v2/roles/reg-client-prep/templates/maven-metadata.xml
+++ b/deployment/sandbox-v2/roles/reg-client-prep/templates/maven-metadata.xml
@@ -3,7 +3,7 @@
 <artifactId>registration-services</artifactId>
 <versioning>
 <versions>
-<version>{{ reg_client.version }}</version>
+<version>{{ versions.services.registration_client.version }}</version>
 </versions>
 <lastUpdated>20200729125958</lastUpdated>
 </versioning>
